--- a/.env
+++ b/.env
@@ -2,6 +2,8 @@ MONGO_URI=mongodb+srv://razvifaizan0_db_user:Faizan%40123@cluster0.eztrsi3.mongo
 JWT_SECRET=yourjwtsecret
 EMAIL=yourgmail@gmail.com
 EMAIL_PASS=yourpassword
+EMAIL_USER=mohammadfaizan5311@gmail.com
+EMAIL_PASS=yrvj zqoq hkml ykqu
 
 # GITHUB_CLIENT_ID
 
